Add cva, update biome and reformat code

--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "example-basic",
-  "type": "module",
-  "scripts": {
-    "dev": "vinxi dev",
-    "build": "vinxi build",
-    "start": "vinxi start",
-    "version": "vinxi version",
-    "test": "vitest run",
-    "test-watch": "vitest",
-    "test-ui": "vitest --ui"
-  },
-  "dependencies": {
-    "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.15.4",
-    "@solidjs/start": "^1.2.1",
-    "solid-js": "^1.9.11",
-    "vinxi": "^0.5.11"
-  },
-  "engines": {
-    "node": ">=22"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.4.2",
-    "@solidjs/testing-library": "^0.8.10",
-    "@tailwindcss/vite": "^4.1.18",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/user-event": "^14.6.1",
-    "@vitest/ui": "^4.0.18",
-    "jsdom": "^28.1.0",
-    "tailwindcss": "^4.1.18",
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.18"
-  }
+    "name": "example-basic",
+    "type": "module",
+    "scripts": {
+        "dev": "vinxi dev",
+        "build": "vinxi build",
+        "start": "vinxi start",
+        "version": "vinxi version",
+        "test": "vitest run",
+        "test-watch": "vitest",
+        "test-ui": "vitest --ui"
+    },
+    "dependencies": {
+        "@solidjs/meta": "^0.29.4",
+        "@solidjs/router": "^0.15.4",
+        "@solidjs/start": "^1.2.1",
+        "class-variance-authority": "^0.7.1",
+        "solid-js": "^1.9.11",
+        "vinxi": "^0.5.11"
+    },
+    "engines": {
+        "node": ">=22"
+    },
+    "devDependencies": {
+        "@biomejs/biome": "2.4.2",
+        "@solidjs/testing-library": "^0.8.10",
+        "@tailwindcss/vite": "^4.1.18",
+        "@testing-library/jest-dom": "^6.9.1",
+        "@testing-library/user-event": "^14.6.1",
+        "@vitest/ui": "^4.0.18",
+        "jsdom": "^28.1.0",
+        "tailwindcss": "^4.1.18",
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.18"
+    }
 }
