--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -3,6 +3,7 @@
 // For a full list of overridable settings, and general information on folder-specific settings,
 // see the documentation: https://zed.dev/docs/configuring-zed#settings-files
 {
-  "format_on_save": "on",
-  "ensure_final_newline_on_save": true
+    "format_on_save": "on",
+    "ensure_final_newline_on_save": true,
+    "tab_size": 4
 }
